Support vte testing

--- a/src/main/resources/synthea.properties
+++ b/src/main/resources/synthea.properties
@@ -5,23 +5,23 @@ exporter.use_uuid_filenames = false
 exporter.subfolders_by_id_substring = false
 # number of years of history to keep in exported records, anything older than this may be filtered out
 # set years_of_history = 0 to skip filtering altogether and keep the entire history
-exporter.years_of_history = 10
+exporter.years_of_history = 20
 # split records allows patients to have one record per provider organization
 exporter.split_records = false
 exporter.split_records.duplicate_data = false
 exporter.ccda.export = false
-exporter.fhir.export = true
-exporter.fhir_stu3.export = false
+exporter.fhir.export = false
+exporter.fhir_stu3.export = true
 exporter.fhir_dstu2.export = false
 exporter.fhir.use_shr_extensions = false
-exporter.fhir.use_us_core_ig = false
+exporter.fhir.use_us_core_ig = true
 exporter.fhir.transaction_bundle = true
 exporter.fhir.bulk_data = false
 exporter.hospital.fhir.export = true
-exporter.hospital.fhir_stu3.export = false
+exporter.hospital.fhir_stu3.export = true
 exporter.hospital.fhir_dstu2.export = false
 exporter.practitioner.fhir.export = true
-exporter.practitioner.fhir_stu3.export = false
+exporter.practitioner.fhir_stu3.export = true
 exporter.practitioner.fhir_dstu2.export = false
 exporter.csv.export = false
 # if exporter.csv.append_mode = true, then each run will add new data to any existing CSVs. if false, each run will clear out the files and start fresh 
@@ -32,14 +32,14 @@ exporter.cdw.export = false
 exporter.text.export = false
 exporter.text.per_encounter_export = false
 exporter.cost_access_outcomes_report = false
-exporter.prevalence_report = false
-exporter.custom_report = false
+exporter.prevalence_report = true
+exporter.custom_report = true
 # note: prevalence and custom reports require a database (set below)
 exporter.custom_report_queries_file = custom_queries.sql
 
 # the number of patients to generate, by default
 # this can be overridden by passing a different value to the Generator constructor
-generate.default_population = 1
+generate.default_population = 1000
 
 generate.log_patients.detail = simple
 # options are "none", "simple", or "detailed" (without quotes). defaults to simple if another value is used
@@ -51,7 +51,7 @@ generate.timestep = 604800000
 # time is in ms
 # 1000 * 60 * 60 * 24 * 7 = 604800000
 
-generate.database_type = none
+generate.database_type = in-memory
 # options are "file", "in-memory", or "none" (without quotes)
 # file = database stored in a file at ./database.mv.db, and results are kept between runs
 # in-memory = in-memory DB only, results not kept between runs
@@ -64,7 +64,10 @@ generate.geography.country_code = US
 generate.geography.timezones.default_file = geography/timezones.csv
 generate.geography.foreign.birthplace.default_file = geography/foreign_birthplace.json
 
-# Set to true if you want every patient to be dead.
+# maximum distance to look for a provider for a given patient, in km
+generate.maximum_provider_search_distance = 2000
+# set to 2000km to support the model that veterans only seek care at VA facilities
+
 generate.only_dead_patients = false
 
 # if true, tracks and prints out details of transition tables for each module upon completion
@@ -139,18 +142,6 @@ generate.providers.homehealth.default_file = providers/home_health_agencies.csv
 generate.providers.veterans.default_file = providers/va_facilities.csv
 generate.providers.urgentcare.default_file = providers/urgent_care_facilities.csv
 generate.providers.primarycare.default_file = providers/primary_care_facilities.csv
-
-# Provider selection behavior
-# How patients select a provider organization:
-#  nearest - select the closest provider. See generate.providers.maximum_search_distance
-#  quality - select the best provider if quality is known. Otherwise nearest.
-#  random  - select randomly.
-#  network - select the nearest provider in your insurance network. same as random except it changes every time the patient switches insurance provider.
-generate.providers.selection_behavior = nearest
-
-# maximum distance to look for a provider for a given patient, in km
-# set to 2000km to support the model that veterans only seek care at VA facilities
-generate.providers.maximum_search_distance = 2000
 
 # Quit Smoking
 lifecycle.quit_smoking.baseline = 0.01
